# oa-bypass

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: error.rs  main.rs  state.rs  utils.rs
src/routes/: assistants.rs  completions.rs  embeddings.rs  files.rs  images.rs  messages.rs  mod.rs  models.rs  responses.rs  runs.rs  threads.rs
